--- a/style.css
+++ b/style.css
@@ -23,6 +23,25 @@ ul{
     list-style: none;
 }
 
+.logo {
+    width: 100px;
+    height: auto;
+}
+
+.logo img{
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+
 /* Header Navbar*/
 .main-header{
     position: fixed;
@@ -37,27 +56,19 @@ ul{
     padding: 0 30px;
 }
 
-.logo {
-    width: 100px;
-    height: auto;
-}
 
-.logo img{
-    width: 100%;
-    display: block;
-    height: auto;
-}
 
-.nav-desktop-menu{
+.desktop-menu{
+    /* overflow: hidden; */
     margin-right: 50px;
 }
 
-.nav-desktop-menu ul{
+.desktop-menu ul{
     display: flex;
 
 }
 
-.nav-desktop-menu ul li
+.desktop-menu ul li
 {
     position: relative;
     margin-right: 20px;
@@ -65,10 +76,9 @@ ul{
 
 }
 
-.nav-desktop-menu ul li a::after
+.desktop-menu ul li a::after
 {
     content: '';
-    text-align: center;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -80,12 +90,14 @@ ul{
     transform-origin: right center;
 }
 
-.nav-desktop-menu ul li a:hover:after
+.desktop-menu ul li a:hover:after
 {
     transform: scaleX(1);
     transform-origin: left center;
     transition-duration: 0.4s ;
 }
+
+
 
 
 
