--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@
 
 body{
     font-family: 'Familjen Grotesk', sans-serif;
-    background: #000;
+    background: #22282f; 
+    /* background: black; */
     color:#fff;
 }
 
@@ -24,17 +25,19 @@ ul{
 }
 
 .logo {
-    width: 100px;
+    width: 120px;
     height: auto;
 }
 
 .logo img{
-    display: block;
+    display: inline-block;
     width: 100%;
     height: auto;
+    mix-blend-mode: hard-light;
 }
 
 nav{
+    background-color: #1b1f24;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -52,15 +55,15 @@ nav{
     justify-content: space-between;
     align-items: center;
     text-transform: uppercase;
-    height: 100px;
-    padding: 0 30px;
+    height: 50px;
+    padding: 0 0px;
 }
 
 
 
 .desktop-menu{
     /* overflow: hidden; */
-    margin-right: 50px;
+    margin-right: 0;
 }
 
 .desktop-menu ul{
